[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/Kenney Rocket.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://game-ui/game-ui.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 1 )

[node name="GameUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreMarginContainer" type="MarginContainer" parent="."]
custom_constants/margin_top = 16
custom_constants/margin_left = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreContainer" type="CenterContainer" parent="ScoreMarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 48.0
margin_bottom = 99.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="ScoreMarginContainer/ScoreContainer"]
margin_right = 32.0
margin_bottom = 83.0
custom_fonts/font = SubResource( 2 )
text = "2
"

[node name="TimeMarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
margin_bottom = 60.0
custom_constants/margin_top = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeContainer" type="CenterContainer" parent="TimeMarginContainer"]
margin_top = 16.0
margin_right = 1024.0
margin_bottom = 76.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeLabel" type="Label" parent="TimeMarginContainer/TimeContainer"]
margin_left = 386.0
margin_right = 638.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 1 )
text = "02.123"
